// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`View Should set the tag to be article 1`] = `
<div>
  <article
    class="default"
  />
</div>
`;

exports[`View Should set the tag to be aside 1`] = `
<div>
  <aside
    class="default"
  />
</div>
`;

exports[`View Should set the tag to be div 1`] = `
<div>
  <div
    class="default"
  />
</div>
`;

exports[`View Should set the tag to be main 1`] = `
<div>
  <main
    class="default"
  />
</div>
`;

exports[`View Should set the tag to be nav 1`] = `
<div>
  <nav
    class="default"
  />
</div>
`;

exports[`View Should set the tag to be section 1`] = `
<div>
  <section
    class="default"
  />
</div>
`;
